test/files/neg/t11921b/p.scala

package p {
  object X
  class C {
    val x = 42
  }
  class D extends C {
    def y = 27
  }
}
